<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CallWaiterActivity" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/callWaiterText"
        android:textSize="22dp" />

    <Button
        android:id="@+id/callWaiter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:gravity="right"
        android:text="@string/callWaiter" />

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/callWaiter"
        android:layout_alignParentRight="true"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/callWaiter"
        android:layout_toLeftOf="@+id/tvTotal"
        android:text="@string/total"
        android:textSize="20dp" />

    <ListView
        android:id="@+id/lvOrders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvTotal"
        android:layout_below="@+id/textView"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp" >
    </ListView>

    <TextView
        android:id="@+id/textTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rgCallType"
        android:layout_alignParentLeft="true"
        android:text="@string/callTo" />

    <RadioGroup
        android:id="@+id/rgCallType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/callWaiter"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/order" />

        <RadioButton
            android:id="@+id/rType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay" />
    </RadioGroup>

</RelativeLayout>